frontend/test/should_pass/computations_do_while.grg
function foo() : int
{
	def var res:int = 42;
	do {
		res = res - 1;
	} while(res > 1)
	return(res);
}

test t : (int)
{
	def var res:int = 42;
	
	independent {
		yield {
			do {
				yield res = res - 1;
			} while(res > 1)
		}
	}
	
	return (res);
}

rule r : (int)
{	
	modify {
		def var res:int = 42;
		
		eval { 
			do {
				yield res = res - 1;
			} while(res > 1)
		}
		
		return (res);
	}
}
