frontend/test/should_fail/computations_do_while_002.grg
muh(var x:int) : int
{
	do
		return(1);
	while(x==1)
	return(0);
}

